src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /medusa
spec:
  rules:
    - http:
        paths:
          - path: /medusa
            pathType: Prefix
            backend:
              service:
                name: medusa
                port:
                  number: 8080
